// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SecretStoreOps Classic Tests createSecretStoreMapping() 0: Create global secret store mapping 1`] = `
{
  "_id": "am.uma.resource.labels.mtls.cert",
  "_rev": "-81392722",
  "_type": {
    "_id": "mappings",
    "collection": true,
    "name": "Mappings",
  },
  "aliases": [
    "new",
    "new2",
    "new3",
  ],
  "secretId": "am.uma.resource.labels.mtls.cert",
}
`;

exports[`SecretStoreOps Classic Tests deleteSecretStore() 0: Delete global secret store 1`] = `
{
  "_id": "am.uma.resource.labels.mtls.cert",
  "_rev": "-81392722",
  "_type": {
    "_id": "mappings",
    "collection": true,
    "name": "Mappings",
  },
  "aliases": [
    "new",
    "new2",
    "new3",
  ],
  "secretId": "am.uma.resource.labels.mtls.cert",
}
`;

exports[`SecretStoreOps Classic Tests deleteSecretStoreMapping() 0: Delete global secret store mapping 1`] = `
{
  "_id": "am.uma.resource.labels.mtls.cert",
  "_rev": "-81392722",
  "_type": {
    "_id": "mappings",
    "collection": true,
    "name": "Mappings",
  },
  "aliases": [
    "new",
    "new2",
    "new3",
  ],
  "secretId": "am.uma.resource.labels.mtls.cert",
}
`;

exports[`SecretStoreOps Classic Tests deleteSecretStoreMappings() 0: Delete global secret store mappings 1`] = `
[
  {
    "_id": "am.applications.agents.remote.consent.request.signing.ES256",
    "_rev": "1192664276",
    "_type": {
      "_id": "mappings",
      "collection": true,
      "name": "Mappings",
    },
    "aliases": [
      "es256test",
    ],
    "secretId": "am.applications.agents.remote.consent.request.signing.ES256",
  },
  {
    "_id": "am.uma.resource.labels.mtls.cert",
    "_rev": "-81392722",
    "_type": {
      "_id": "mappings",
      "collection": true,
      "name": "Mappings",
    },
    "aliases": [
      "new",
      "new2",
      "new3",
    ],
    "secretId": "am.uma.resource.labels.mtls.cert",
  },
]
`;

exports[`SecretStoreOps Classic Tests deleteSecretStores() 0: Delete global secret stores 1`] = `
"Error deleting the / realm secret store EnvironmentAndSystemPropertySecretStore
  HTTP client error
    URL: http://openam-frodo-dev.classic.com:8080/am/json/global-config/secrets/stores/EnvironmentAndSystemPropertySecretStore/
    Status: 400
    Code: ERR_BAD_REQUEST
    Reason: Bad Request
    Message: The singleton resource cannot be deleted"
`;

exports[`SecretStoreOps Classic Tests deleteSecretStores() 0: Delete global secret stores 2`] = `
[
  {
    "_id": "test-keystore",
    "_rev": "-985219930",
    "_type": {
      "_id": "KeyStoreSecretStore",
      "collection": true,
      "name": "Keystore",
    },
    "file": "/root/am/security/keystores/keystore.jceks",
    "keyEntryPassword": "entrypass",
    "leaseExpiryDuration": 5,
    "providerName": "SunJCE",
    "storePassword": "storepass",
    "storetype": "JCEKS",
  },
  {
    "_id": "test-keystore-2",
    "_rev": "1389724204",
    "_type": {
      "_id": "FileSystemSecretStore",
      "collection": true,
      "name": "File System Secret Volumes",
    },
    "directory": "/root/am/security/secrets/encrypted",
    "format": "ENCRYPTED_PLAIN",
  },
]
`;

exports[`SecretStoreOps Classic Tests exportSecretStore() 0: Export global secret store 1`] = `
{
  "meta": Any<Object>,
  "secretstore": {
    "test-keystore": {
      "_id": "test-keystore",
      "_type": {
        "_id": "KeyStoreSecretStore",
        "collection": true,
        "name": "Keystore",
      },
      "file": "/root/am/security/keystores/keystore.jceks",
      "keyEntryPassword": "entrypass",
      "leaseExpiryDuration": 5,
      "mappings": [
        {
          "_id": "am.applications.agents.remote.consent.request.signing.ES256",
          "_rev": "1192664276",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "es256test",
          ],
          "secretId": "am.applications.agents.remote.consent.request.signing.ES256",
        },
        {
          "_id": "am.uma.resource.labels.mtls.cert",
          "_rev": "-81392722",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "new",
            "new2",
            "new3",
          ],
          "secretId": "am.uma.resource.labels.mtls.cert",
        },
      ],
      "providerName": "SunJCE",
      "storePassword": "storepass",
      "storetype": "JCEKS",
    },
  },
}
`;

exports[`SecretStoreOps Classic Tests exportSecretStores() 0: Export realm SecretStores 1`] = `
{
  "meta": Any<Object>,
  "secretstore": {
    "Volumes": {
      "_id": "Volumes",
      "_type": {
        "_id": "FileSystemSecretStore",
        "collection": true,
        "name": "File System Secret Volumes",
      },
      "directory": "/home/trivir/secrets",
      "format": "BASE64",
      "suffix": ".txt",
      "versionSuffix": ".v",
    },
  },
}
`;

exports[`SecretStoreOps Classic Tests exportSecretStores() 1: Export global SecretStores 1`] = `
{
  "meta": Any<Object>,
  "secretstore": {
    "EnvironmentAndSystemPropertySecretStore": {
      "_id": "EnvironmentAndSystemPropertySecretStore",
      "_type": {
        "_id": "EnvironmentAndSystemPropertySecretStore",
        "collection": false,
        "name": "Environment and System Property Secrets Store",
      },
      "format": "BASE64",
    },
    "test-keystore": {
      "_id": "test-keystore",
      "_type": {
        "_id": "KeyStoreSecretStore",
        "collection": true,
        "name": "Keystore",
      },
      "file": "/root/am/security/keystores/keystore.jceks",
      "keyEntryPassword": "entrypass",
      "leaseExpiryDuration": 5,
      "mappings": [
        {
          "_id": "am.applications.agents.remote.consent.request.signing.ES256",
          "_rev": "1192664276",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "es256test",
          ],
          "secretId": "am.applications.agents.remote.consent.request.signing.ES256",
        },
        {
          "_id": "am.uma.resource.labels.mtls.cert",
          "_rev": "-81392722",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "new",
            "new2",
            "new3",
          ],
          "secretId": "am.uma.resource.labels.mtls.cert",
        },
      ],
      "providerName": "SunJCE",
      "storePassword": "storepass",
      "storetype": "JCEKS",
    },
  },
}
`;

exports[`SecretStoreOps Classic Tests importSecretStores() 0: Import global secret stores 1`] = `
[
  {
    "_id": "test-keystore",
    "_rev": "-985219930",
    "_type": {
      "_id": "KeyStoreSecretStore",
      "collection": true,
      "name": "Keystore",
    },
    "file": "/root/am/security/keystores/keystore.jceks",
    "keyEntryPassword": "entrypass",
    "leaseExpiryDuration": 5,
    "mappings": [
      {
        "_id": "am.uma.resource.labels.mtls.cert",
        "_rev": "-81392722",
        "_type": {
          "_id": "mappings",
          "collection": true,
          "name": "Mappings",
        },
        "aliases": [
          "new",
          "new2",
          "new3",
        ],
        "secretId": "am.uma.resource.labels.mtls.cert",
      },
      {
        "_id": "am.applications.agents.remote.consent.request.signing.ES256",
        "_rev": "1192664276",
        "_type": {
          "_id": "mappings",
          "collection": true,
          "name": "Mappings",
        },
        "aliases": [
          "es256test",
        ],
        "secretId": "am.applications.agents.remote.consent.request.signing.ES256",
      },
    ],
    "providerName": "SunJCE",
    "storePassword": "storepass",
    "storetype": "JCEKS",
  },
  {
    "_id": "test-keystore-2",
    "_rev": "1389724204",
    "_type": {
      "_id": "FileSystemSecretStore",
      "collection": true,
      "name": "File System Secret Volumes",
    },
    "directory": "/root/am/security/secrets/encrypted",
    "format": "ENCRYPTED_PLAIN",
  },
]
`;

exports[`SecretStoreOps Classic Tests readSecretStore() 0: Read global secret store 1`] = `
{
  "_id": "test-keystore",
  "_type": {
    "_id": "KeyStoreSecretStore",
    "collection": true,
    "name": "Keystore",
  },
  "file": "/root/am/security/keystores/keystore.jceks",
  "keyEntryPassword": "entrypass",
  "leaseExpiryDuration": 5,
  "providerName": "SunJCE",
  "storePassword": "storepass",
  "storetype": "JCEKS",
}
`;

exports[`SecretStoreOps Classic Tests readSecretStoreMapping() 0: Read global secret store mapping 1`] = `
{
  "_id": "am.uma.resource.labels.mtls.cert",
  "_rev": "-81392722",
  "_type": {
    "_id": "mappings",
    "collection": true,
    "name": "Mappings",
  },
  "aliases": [
    "new",
    "new2",
    "new3",
  ],
  "secretId": "am.uma.resource.labels.mtls.cert",
}
`;

exports[`SecretStoreOps Classic Tests readSecretStoreMappings() 0: Read global secret store mappings 1`] = `
[
  {
    "_id": "am.applications.agents.remote.consent.request.signing.ES256",
    "_rev": "1192664276",
    "_type": {
      "_id": "mappings",
      "collection": true,
      "name": "Mappings",
    },
    "aliases": [
      "es256test",
    ],
    "secretId": "am.applications.agents.remote.consent.request.signing.ES256",
  },
  {
    "_id": "am.uma.resource.labels.mtls.cert",
    "_rev": "-81392722",
    "_type": {
      "_id": "mappings",
      "collection": true,
      "name": "Mappings",
    },
    "aliases": [
      "new",
      "new2",
      "new3",
    ],
    "secretId": "am.uma.resource.labels.mtls.cert",
  },
]
`;

exports[`SecretStoreOps Classic Tests readSecretStoreSchema() 0: Read realm secret store schema 1`] = `
{
  "properties": {
    "file": {
      "description": "The keystore file to use",
      "exampleValue": "",
      "propertyOrder": 100,
      "required": true,
      "title": "File",
      "type": "string",
    },
    "keyEntryPassword": {
      "description": "The secret value from which the entry password can be obtained, or none if the password is blank. This secret label will be resolved using one of the other secret stores configured.<br> It must not start or end with the <code>.</code> character. <br>The <code>.</code> character must not be followed by another <code>.</code> character.<br>Must contain <code>a-z</code>, <code>A-Z</code>, <code>0-9</code> and <code>.</code> characters only.",
      "exampleValue": "",
      "propertyOrder": 500,
      "required": false,
      "title": "Entry password secret label",
      "type": "string",
    },
    "leaseExpiryDuration": {
      "default": 5,
      "description": "The amount of minutes a key can be cached from the keystore before it needs to be reloaded.",
      "exampleValue": "",
      "propertyOrder": 600,
      "required": true,
      "title": "Key lease expiry",
      "type": "integer",
    },
    "providerName": {
      "description": "The classname of a provider to use to load the keystore. If blank, the JRE default will be used.",
      "exampleValue": "",
      "propertyOrder": 300,
      "required": false,
      "title": "Provider name",
      "type": "string",
    },
    "storePassword": {
      "description": "The secret label from which the store password can be obtained, or none if the password is blank. This secret label will be resolved using one of the other secret stores configured.<br> It must not start or end with the <code>.</code> character <br>The <code>.</code> character must not be followed by another <code>.</code> character.<br>Must contain <code>a-z</code>, <code>A-Z</code>, <code>0-9</code> and <code>.</code> characters only.",
      "exampleValue": "",
      "propertyOrder": 400,
      "required": false,
      "title": "Store password secret label",
      "type": "string",
    },
    "storetype": {
      "default": "JCEKS",
      "description": "The type of the keystore (JKS, JCEKS, PKCS11, PKCS12, others). This must be a keystore type known or configured on the JRE.",
      "exampleValue": "",
      "propertyOrder": 200,
      "required": true,
      "title": "Keystore type",
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`SecretStoreOps Classic Tests readSecretStoreSchema() 1: Read global secret store schema 1`] = `
{
  "properties": {
    "format": {
      "default": "BASE64",
      "description": "Indicates what format is used to store the secrets in the files. The available options are: <ul> <li>Plain text: the secrets are stored as UTF-8 encoded text.</li> <li>Base64 encoded: the secrets are stored as Base64 encoded binary values.</li> <li>Encrypted text: the plain text secrets are encrypted using AM's encryption key.</li> <li>Encrypted Base64 encoded: the Base64 encoded binary values are encrypted using AM's encryption key.</li>  <li>Encrypted with Google KMS: the secrets are encrypted using Google's Key Management Service.</li> <li>PEM encoded certificate or key: the secrets are certificates, keys, or passwords, in Privacy Enhanced Mail (PEM) format, such as those produced by OpenSSL and other common tools.</li> <li>Encrypted PEM: PEM-encoded objects that are encrypted with AM's server key.</li><li>Google KMS-encrypted PEM: PEM-encoded objects that are encrypted with Google KMS.</li></ul><p>The following formats are also supported but are discouraged (use the PEM variants instead): <ul><li>Encrypted HMAC key: the Base64 encoded binary representation of the HMAC key is encrypted using AM's encryption key. Use this format when working with non generic secrets.</li> <li>Base64 encoded HMAC key: the secrets are binary HMAC keys encoded with Base64.</li> <li>Google KMS-encrypted HMAC key: the secrets are binary HMAC keys that have been encrypted with Google's Key Management Service (KMS).</li> </ul>",
      "enum": [
        "PLAIN",
        "BASE64",
        "ENCRYPTED_PLAIN",
        "ENCRYPTED_BASE64",
        "ENCRYPTED_HMAC_KEY",
        "BASE64_HMAC_KEY",
        "GOOGLE_KMS_ENCRYPTED",
        "GOOGLE_KMS_ENCRYPTED_HMAC_KEY",
        "PEM",
        "ENCRYPTED_PEM",
        "GOOGLE_KMS_ENCRYPTED_PEM",
        "JWK",
      ],
      "enumNames": [
        "Plain text",
        "Base64 encoded",
        "Encrypted text",
        "Encrypted Base64 encoded",
        "Encrypted HMAC key (deprecated)",
        "Base64 encoded HMAC key (deprecated)",
        "Encrypted with Google KMS",
        "Google KMS-encrypted HMAC key (deprecated)",
        "PEM encoded certificate, key, or password",
        "Encrypted PEM",
        "Google KMS-encrypted PEM",
        "JWK",
      ],
      "exampleValue": "",
      "options": {
        "enum_titles": [
          "Plain text",
          "Base64 encoded",
          "Encrypted text",
          "Encrypted Base64 encoded",
          "Encrypted HMAC key (deprecated)",
          "Base64 encoded HMAC key (deprecated)",
          "Encrypted with Google KMS",
          "Google KMS-encrypted HMAC key (deprecated)",
          "PEM encoded certificate, key, or password",
          "Encrypted PEM",
          "Google KMS-encrypted PEM",
          "JWK",
        ],
      },
      "propertyOrder": 100,
      "required": true,
      "title": "Value format",
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`SecretStoreOps Classic Tests readSecretStores() 0: Read realm SecretStores 1`] = `
[
  {
    "_id": "Volumes",
    "_type": {
      "_id": "FileSystemSecretStore",
      "collection": true,
      "name": "File System Secret Volumes",
    },
    "directory": "/home/trivir/secrets",
    "format": "BASE64",
    "suffix": ".txt",
    "versionSuffix": ".v",
  },
]
`;

exports[`SecretStoreOps Classic Tests readSecretStores() 1: Read global SecretStores 1`] = `
[
  {
    "_id": "test-keystore",
    "_type": {
      "_id": "KeyStoreSecretStore",
      "collection": true,
      "name": "Keystore",
    },
    "file": "/root/am/security/keystores/keystore.jceks",
    "keyEntryPassword": "entrypass",
    "leaseExpiryDuration": 5,
    "providerName": "SunJCE",
    "storePassword": "storepass",
    "storetype": "JCEKS",
  },
  {
    "_id": "EnvironmentAndSystemPropertySecretStore",
    "_type": {
      "_id": "EnvironmentAndSystemPropertySecretStore",
      "collection": false,
      "name": "Environment and System Property Secrets Store",
    },
    "format": "BASE64",
  },
]
`;

exports[`SecretStoreOps Classic Tests updateSecretStore() 0: Update global secret store 1`] = `
{
  "_id": "test-keystore",
  "_rev": "-985219927",
  "_type": {
    "_id": "KeyStoreSecretStore",
    "collection": true,
    "name": "Keystore",
  },
  "file": "/root/am/security/keystores/keystore.jceks",
  "keyEntryPassword": "entrypass",
  "leaseExpiryDuration": 6,
  "providerName": "SunJCE",
  "storePassword": "storepass",
  "storetype": "JCEKS",
}
`;

exports[`SecretStoreOps Classic Tests updateSecretStoreMapping() 0: Update global secret store mapping 1`] = `
{
  "_id": "am.uma.resource.labels.mtls.cert",
  "_rev": "-1586116305",
  "_type": {
    "_id": "mappings",
    "collection": true,
    "name": "Mappings",
  },
  "aliases": [
    "new",
    "new2",
    "new3",
    "new4",
    "new5",
  ],
  "secretId": "am.uma.resource.labels.mtls.cert",
}
`;

exports[`SecretStoreOps Cloud Tests createSecretStoreMapping() 1: Create secret store mapping 1`] = `
{
  "_id": "am.services.oauth2.oidc.signing.EDDSA",
  "_rev": "77842068",
  "_type": {
    "_id": "mappings",
    "collection": true,
    "name": "Mappings",
  },
  "aliases": [
    "esv-test-signing-cert",
  ],
  "secretId": "am.services.oauth2.oidc.signing.EDDSA",
}
`;

exports[`SecretStoreOps Cloud Tests deleteSecretStoreMapping() 1: Delete ESV secret store mapping 1`] = `
{
  "_id": "am.services.oauth2.oidc.signing.EDDSA",
  "_rev": "1919880477",
  "_type": {
    "_id": "mappings",
    "collection": true,
    "name": "Mappings",
  },
  "aliases": [
    "esv-test",
  ],
  "secretId": "am.services.oauth2.oidc.signing.EDDSA",
}
`;

exports[`SecretStoreOps Cloud Tests deleteSecretStoreMappings() 0: Delete ESV secret store mappings 1`] = `[]`;

exports[`SecretStoreOps Cloud Tests exportSecretStore() 1: Export ESV secret store 1`] = `
{
  "meta": Any<Object>,
  "secretstore": {
    "ESV": {
      "_id": "ESV",
      "_rev": "325689269",
      "_type": {
        "_id": "GoogleSecretManagerSecretStoreProvider",
        "collection": true,
        "name": "Google Secret Manager",
      },
      "expiryDurationSeconds": 600,
      "mappings": [
        {
          "_id": "am.services.oauth2.oidc.signing.EDDSA",
          "_rev": "77842068",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "esv-test-signing-cert",
          ],
          "secretId": "am.services.oauth2.oidc.signing.EDDSA",
        },
      ],
      "project": "&{google.project.id}",
      "secretFormat": "PEM",
      "serviceAccount": "default",
    },
  },
}
`;

exports[`SecretStoreOps Cloud Tests exportSecretStores() 1: Export realm SecretStores 1`] = `
{
  "meta": Any<Object>,
  "secretstore": {
    "ESV": {
      "_id": "ESV",
      "_rev": "325689269",
      "_type": {
        "_id": "GoogleSecretManagerSecretStoreProvider",
        "collection": true,
        "name": "Google Secret Manager",
      },
      "expiryDurationSeconds": 600,
      "mappings": [
        {
          "_id": "am.services.oauth2.oidc.signing.EDDSA",
          "_rev": "77842068",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "esv-test-signing-cert",
          ],
          "secretId": "am.services.oauth2.oidc.signing.EDDSA",
        },
      ],
      "project": "&{google.project.id}",
      "secretFormat": "PEM",
      "serviceAccount": "default",
    },
  },
}
`;

exports[`SecretStoreOps Cloud Tests importSecretStores() 1: Import ESV secret store 1`] = `
"TESTING ERROR: Expected a FrodoError, but got a different error.
Message: Request failed with status code 400"
`;

exports[`SecretStoreOps Cloud Tests importSecretStores() 1: Import ESV secret store 2`] = `[]`;

exports[`SecretStoreOps Cloud Tests readSecretStore() 1: Read ESV secret store 1`] = `
{
  "_id": "ESV",
  "_rev": "325689269",
  "_type": {
    "_id": "GoogleSecretManagerSecretStoreProvider",
    "collection": true,
    "name": "Google Secret Manager",
  },
  "expiryDurationSeconds": 600,
  "project": "&{google.project.id}",
  "secretFormat": "PEM",
  "serviceAccount": "default",
}
`;

exports[`SecretStoreOps Cloud Tests readSecretStoreMapping() 1: Read ESV secret store mapping 1`] = `
{
  "_id": "am.services.oauth2.oidc.signing.EDDSA",
  "_rev": "77842068",
  "_type": {
    "_id": "mappings",
    "collection": true,
    "name": "Mappings",
  },
  "aliases": [
    "esv-test-signing-cert",
  ],
  "secretId": "am.services.oauth2.oidc.signing.EDDSA",
}
`;

exports[`SecretStoreOps Cloud Tests readSecretStoreMappings() 1: Read ESV secret store mappings 1`] = `
[
  {
    "_id": "am.services.oauth2.oidc.signing.EDDSA",
    "_rev": "77842068",
    "_type": {
      "_id": "mappings",
      "collection": true,
      "name": "Mappings",
    },
    "aliases": [
      "esv-test-signing-cert",
    ],
    "secretId": "am.services.oauth2.oidc.signing.EDDSA",
  },
]
`;

exports[`SecretStoreOps Cloud Tests readSecretStoreSchema() 1: Read ESV secret store schema 1`] = `
{
  "properties": {
    "expiryDurationSeconds": {
      "default": 600,
      "description": "Maximum time that AM should cache secret values before refreshing them from Google SecretManager. A longer duration may be more efficient but may take longer for new secret versions to be picked up. Thistypically only affects operations that use the "active" (latest) version of a secret. Operations that use previousversions of a secret will always query Secret Manager to ensure timely revocation.",
      "exampleValue": "",
      "propertyOrder": 400,
      "required": true,
      "title": "Expiry Time (seconds)",
      "type": "integer",
    },
    "project": {
      "description": "The GCP project that contains the Secret Manager instance to use.",
      "exampleValue": "",
      "propertyOrder": 100,
      "required": true,
      "title": "Project",
      "type": "string",
    },
    "secretFormat": {
      "default": "PLAIN",
      "description": "Indicates what format is used to store the secrets in the files. The available options are: <ul> <li>Plain text: the secrets are stored as UTF-8 encoded text.</li> <li>Base64 encoded: the secrets are stored as Base64 encoded binary values.</li> <li>Encrypted text: the plain text secrets are encrypted using AM's encryption key.</li> <li>Encrypted Base64 encoded: the Base64 encoded binary values are encrypted using AM's encryption key.</li>  <li>Encrypted with Google KMS: the secrets are encrypted using Google's Key Management Service.</li> <li>PEM encoded certificate or key: the secrets are certificates, keys, or passwords, in Privacy Enhanced Mail (PEM) format, such as those produced by OpenSSL and other common tools.</li> <li>Encrypted PEM: PEM-encoded objects that are encrypted with AM's server key.</li><li>Google KMS-encrypted PEM: PEM-encoded objects that are encrypted with Google KMS.</li></ul><p>The following formats are also supported but are discouraged (use the PEM variants instead): <ul><li>Encrypted HMAC key: the Base64 encoded binary representation of the HMAC key is encrypted using AM's encryption key. Use this format when working with non generic secrets.</li> <li>Base64 encoded HMAC key: the secrets are binary HMAC keys encoded with Base64.</li> <li>Google KMS-encrypted HMAC key: the secrets are binary HMAC keys that have been encrypted with Google's Key Management Service (KMS).</li> </ul>",
      "enum": [
        "PLAIN",
        "BASE64",
        "ENCRYPTED_PLAIN",
        "ENCRYPTED_BASE64",
        "ENCRYPTED_HMAC_KEY",
        "BASE64_HMAC_KEY",
        "GOOGLE_KMS_ENCRYPTED",
        "GOOGLE_KMS_ENCRYPTED_HMAC_KEY",
        "PEM",
        "ENCRYPTED_PEM",
        "GOOGLE_KMS_ENCRYPTED_PEM",
        "JWK",
      ],
      "enumNames": [
        "Plain text",
        "Base64 encoded",
        "Encrypted text",
        "Encrypted Base64-encoded",
        "Encrypted HMAC key",
        "Base64-encoded HMAC key",
        "Encrypted with Google KMS",
        "Google KMS-encrypted HMAC key",
        "PEM encoded certificate, key, or password",
        "Encrypted PEM",
        "Google KMS-encrypted PEM",
        "JWK",
      ],
      "exampleValue": "",
      "options": {
        "enum_titles": [
          "Plain text",
          "Base64 encoded",
          "Encrypted text",
          "Encrypted Base64-encoded",
          "Encrypted HMAC key",
          "Base64-encoded HMAC key",
          "Encrypted with Google KMS",
          "Google KMS-encrypted HMAC key",
          "PEM encoded certificate, key, or password",
          "Encrypted PEM",
          "Google KMS-encrypted PEM",
          "JWK",
        ],
      },
      "propertyOrder": 300,
      "required": true,
      "title": "Secret Format",
      "type": "string",
    },
    "serviceAccount": {
      "default": "default",
      "description": "The ID of the GCP service account to use when connecting to Secret Manager.<br><br>GCP service accounts can be configured in the global Google Service Account service. The service account must be enabled for this realm otherwise the secret store will fail to load.",
      "exampleValue": "",
      "propertyOrder": 200,
      "required": true,
      "title": "GCP Service Account ID",
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`SecretStoreOps Cloud Tests readSecretStores() 1: Read realm SecretStores 1`] = `
[
  {
    "_id": "ESV",
    "_rev": "325689269",
    "_type": {
      "_id": "GoogleSecretManagerSecretStoreProvider",
      "collection": true,
      "name": "Google Secret Manager",
    },
    "expiryDurationSeconds": 600,
    "project": "&{google.project.id}",
    "secretFormat": "PEM",
    "serviceAccount": "default",
  },
]
`;

exports[`SecretStoreOps Cloud Tests updateSecretStoreMapping() 1: Update ESV secret store mapping 1`] = `
{
  "_id": "am.services.oauth2.oidc.signing.EDDSA",
  "_rev": "1919880477",
  "_type": {
    "_id": "mappings",
    "collection": true,
    "name": "Mappings",
  },
  "aliases": [
    "esv-test",
  ],
  "secretId": "am.services.oauth2.oidc.signing.EDDSA",
}
`;

exports[`SecretStoreOps createSecretStoreExportTemplate() 1: Create SecretStore Export Template 1`] = `
{
  "meta": Any<Object>,
  "secretstore": {},
}
`;
